@@ -1,3 +1,7 @@
+2009-08-03 Fatih Aşıcı <fatih@pardus.org.tr>
+		* Make it possible to specify doc directory's name via destDir
+		parameter provided to pisitools.dodoc.
+
 2009-06-30 Onur Küçük <onur@pardus.org.tr>
 		* Change default make job number from 1 to 3 in pisi defaults,
 		sometimes it is forgotten and we need to see parallel build errors
